Update project dependencies and build configurations
This commit encompasses changes related to dependency updates, involving the switch from external 'org.buildobjects.process' to 'com.simtechdata.process'. The build configuration has been modified; dependencies retained, shuffled, and removed. Maven assembly plugin has been added, and a new 'Fonts' class has also been introduced. The pom.xml modification adjusts packaging to use 'jar' and includes an assembly plugin. Other changes include swapping SceneOneFX and EasyFXControls dependencies for in-package classes, and updates in multiple classes to accommodate this shift. Furthermore, new configuration files like 'jni-config.json', 'proxy-config.json', etc. have also been added.